# random-words-api-rust

./: Cargo.toml  Dockerfile  api.yaml
src/: errors.rs  main.rs  word_lists.rs
src/word_lists/: api_handlers.rs  model.rs  repository.rs
