[package]
name = "random_words_api_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
surrealdb = { version = "1.5.4" }
tokio = { version = "1.39.2", features = ["full"] }
serde = "1.0.208"
utoipa = { version = "4", features = ["axum_extras"]}
utoipa-redoc = { version = "4", features = ["axum"] }
utoipa-swagger-ui = { version = "7", features = ["axum"] }
